--- a/css/tablas.css
+++ b/css/tablas.css
@@ -33,7 +33,7 @@ tr:hover td{
     top:-58px;
     left:1000px;
 }
-/*tablas proveedor*/
+/*tabla proveedor*/
 .centrar_categoria{
     position: absolute;
     text-align: center;
@@ -41,4 +41,13 @@ tr:hover td{
     width: 30%;
     top:-58px;
     left:1000px;
+}
+/*tabla producto*/
+.centrar_producto{
+    position: absolute;
+    text-align: center;
+    margin: 200px auto;
+    width: 30%;
+    top:420px;
+    left:330px;
 }
