--- a/css/inicio.css
+++ b/css/inicio.css
@@ -50,18 +50,15 @@ ul{
     position: relative;
     top: -55px;
     left: 56%;
-    
     transition: 0.25s;
 }
   .barra_b{
-    border:0;
     background: none;
     display: block;
     margin: 20px auto;
     text-align: center;
     border: 4px solid  #3498db;
     padding: 14px 10px;
-    width: 200px;
     outline: none;
     color: white;
     border-radius: 24px;
@@ -71,7 +68,6 @@ ul{
   }
   
   .barra_b:focus+.button{
-      
     position: relative;
     top: -55px;
     left: 62%;
@@ -91,6 +87,10 @@ ul{
     left: 21%;*/
     margin: 100px auto;
     width: 60%;
+  }
+  .controles a{
+      margin-left: 10px;
+      border: 8px solid #3742fa;
   }
   .controles a li{
     list-style:none;
