elimine los archivos css inicio1 e inicio2

--- a/css/inicio.css
+++ b/css/inicio.css
@@ -101,6 +101,10 @@ ul{
     color: white;
     font-size: 60px;
   }
+  .sub{
+    color: white;
+    font-size: 60px;
+  }
   /*formulaio de categorias*/
   .agregar_c h2{
     text-align: center;
